# project-composer

./: .gitignore  CHANGELOG.rst  LICENCE.txt  Makefile  README.rst  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
diags/: __init__.py  django.py  icons.py  processors.py  resolver.py  workflow.py
docs/: cli.rst  composer_reference.rst  conf.py  development.rst  history.rst  index.rst  install.rst  manifest_reference.rst  overview.rst  processors_reference.rst  requirements.txt  sample_basic.rst  sphinx_reload.py  workflow.rst
docs/core/: app_storage.rst  collector.rst  compose.rst  django.rst  exceptions.rst  importer.rst  index.rst  logger.rst  manifest.rst  marker.rst  miscellaneous.rst  processors.rst  utilities.rst
project_composer/: __init__.py  cli.py  collector.py  compose.py  defaults.py  exceptions.py  helpers.py  importer.py  logger.py  manifest.py  marker.py
project_composer/app_storage/: __init__.py  node.py  store.py
project_composer/cli/: base_options.py  entrypoint.py  purge.py  requirements.py  version.py
project_composer/compose/: __init__.py  base.py  classes.py  django.py  purge.py  requirements.py  text.py
project_composer/contrib/django/: collector.py  helpers.py  processors.py
project_composer/manifest/: __init__.py  base.py  fields.py  manifesto.py  plugins.py
project_composer/processors/: __init__.py  base.py  classes.py  django.py  purge.py  text.py
project_composer/utils/: encoding.py  tests.py  tree_printer.py
tests/: 0001_importer.py  0002_config.py  0002_manifest.py  0003_appstore.py  0004_manifest.py  0010_composer_base.py  0020_class_composer.py  0020_class_processors.py  0021_django_processors.py  0022_textcontent_processors.py  0023_purge_processors.py  0030_check.py  0030_django_composer.py  0040_textcontent_composer.py  0050_purge.py  0100_cli_version.py  0110_cli_requirements.py  0120_cli_purge.py  conftest.py
tests/data_fixtures/: requirements_template.txt
tests/data_fixtures/advanced_structure/blog/: __init__.py  requirements.txt  settings.py
tests/data_fixtures/advanced_structure/cms/: __init__.py  requirements.txt  settings.py
tests/data_fixtures/advanced_structure/cms_blog/: __init__.py  requirements.txt  settings.py
tests/data_fixtures/advanced_structure/django/: settings.py
tests/data_fixtures/advanced_structure/editor/: __init__.py  requirements.txt  settings.py
tests/data_fixtures/advanced_structure/filer/: requirements.txt  settings.py
tests/data_fixtures/advanced_structure/forms/: __init__.py  requirements.txt  settings.py
tests/data_fixtures/advanced_structure/rest/: requirements.txt  settings.py
tests/data_fixtures/apps_structure/bar/: requirements.txt  source.txt  urls.py
tests/data_fixtures/apps_structure/dummy/: settings.py
tests/data_fixtures/apps_structure/foo/: urls.py
tests/data_fixtures/apps_structure/invalid/: urls.py
tests/data_fixtures/apps_structure/ping/: source.txt
tests/data_fixtures/appstore_datasets/: advanced_complex_apps.json  advanced_complex_default-app_apps.json  advanced_complex_default-app_result.json  advanced_complex_result.json  advanced_complex_source.json  advanced_dependencies_apps.json  advanced_dependencies_default-app_apps.json  advanced_dependencies_default-app_result.json  advanced_dependencies_result.json  advanced_dependencies_source.json  basic_dependencies_push_end_apps.json  basic_dependencies_push_end_result.json  basic_dependencies_push_end_source.json  circular_error_source.json  duplicate_names_source.json  minimal_dependency_result.json  minimal_dependency_source.json  minimal_multiple_result.json  minimal_multiple_source.json  minimal_nodependency_default-app_source.json  minimal_nodependency_push_end_apps.json  minimal_nodependency_push_end_result.json  minimal_nodependency_push_end_source.json  minimal_single_result.json  minimal_single_source.json  unknow_dependency.json
tests/data_fixtures/basic_structure/bar/: __init__.py  settings.py
tests/data_fixtures/basic_structure/dummy/: urls.py
tests/data_fixtures/basic_structure/foo/: __init__.py  requirements.txt  settings.py  source.txt
tests/data_fixtures/basic_structure/invalid/: __init__.py  settings.py
tests/data_fixtures/basic_structure/ping/: requirements.txt  settings.py
tests/data_fixtures/basic_structure/pong/: urls.py
tests/data_fixtures/manifests/: all_apps.json  basic.json  basic.toml  full.json  full.toml  invalid_format.json  invalid_format.toml  invalid_pyproject.toml  invalid_syntax.json
