;;
;; Project composer package
;;
[metadata]
name = project-composer
version = 0.2.3
description = A system to compose project parts from applications enabled in a manifest
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/project-composer
license = MIT
keywords = Python
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages = find:
zip_safe = True

[options.extras_require]
colorlog =
    colorlog
dev =
    flake8
    pytest
    freezegun
    sphinx
    sphinx-rtd-theme
    livereload
    twine
    tox

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    project_composer = project_composer.cli:main

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    tests/data_fixtures

[tool:pytest]
addopts = -vv --ignore=tests/data_fixtures
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,39,310}-colorlog{Disabled,Enabled}

[testenv]

deps =
    colorlogEnabled: colorlog

commands =
    pip install -e .[dev]
    pytest -vv tests
