;;
;; Project composer package
;;
[metadata]
name = project-composer
version = 0.7.2
description = A system to compose project parts from applications enabled in a manifest
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/project-composer
project_urls =
    Source Code = https://github.com/sveetch/project-composer
    Issue Tracker = https://github.com/sveetch/project-composer/issues
    Changelog = https://project-composer.readthedocs.io/en/latest/history.html
    Documentation = https://project-composer.readthedocs.io/
license = MIT
keywords = Python
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
python_requires = >=3.8
install_requires =
    click>=8.0
    colorlog>=6.7.0
    tomli>=2.0.1
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest>=7.0
    freezegun>=1.2.0
quality =
    flake8>=6.0.0
    tox>=4.11.0
doc =
    sphinx>=8.0.2
    furo>=2024.8.6
    sphinx-copybutton>=0.5.2
    diagrams>=0.23.3
    pillow>=8.0.0
doc-live =
    livereload>=2.6.0
release =
    twine>=5.0.0

[options.packages.find]
where = .
exclude=
    data
    docs
    tests

[options.entry_points]
console_scripts =
    project_composer = project_composer.cli.entrypoint:cli_frontend

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    tests/data_fixtures

[tool:pytest]
addopts = -v --tb=long --ignore=tests/data_fixtures
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist =  py{38,310,311}

[testenv]

commands =
    pip install -e .[dev]
    pytest -vv tests
